--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <!-- Header -->
     <header id="header">
         <h1>Replenish AI</h1>
-        <p>Omni-channel fulfillment software for your brand<br /> Manage your inventoy</p>
+        <p>Omni-Channel Fulfillment Software for your Brand<br /> </p>
     </header>
 
 
