--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <!-- Header -->
     <header id="header">
         <h1>Replenish AI</h1>
-        <p>Omni-Channel Fulfillment Software for your Brand<br /> </p>
+        <p>Multi-Channel AI Fulfillment Software<br /> </p>
     </header>
 
 
@@ -35,13 +35,13 @@
 
     <ul class="icons">
         <li>
-            <h3>Real Time Inventoy Management</h3>
+            <h3>Outsource Order Fulfillment</h3>
         </li>
         <li>
-            <H3>Track your Orders</h3>
+            <H3>Real-Time Inventory Management</h3>
         </li>
         <li>
-            <h3>Monitor 3PL Performance</h3>
+            <h3>Optimize Product Flow Path</h3>
         </li>
     </ul>
 
