--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 
 <head>
-    <title>Replenish AI</title>
+    <title>Charlie</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
     <link rel="stylesheet" href="assets/css/main.css" />
@@ -18,8 +18,8 @@
 
     <!-- Header -->
     <header id="header">
-        <h1>Replenish AI</h1>
-        <p>Multi-Channel AI Fulfillment Software<br /> </p>
+        <h1>Charlie</h1>
+        <p>Enterprise Supply Chain Search<br /> </p>
     </header>
 
 
@@ -35,13 +35,13 @@
 
     <ul class="icons">
         <li>
-            <h3>Outsource Order Fulfillment</h3>
+            <h3>Chat with Charlie in Slack or Teams</h3>
         </li>
         <li>
-            <H3>Real-Time Inventory Management</h3>
+            <H3>Connect ERP to Charlie for quick queries</h3>
         </li>
         <li>
-            <h3>Optimize Product Flow Path</h3>
+            <h3>Minimize time spent building reports</h3>
         </li>
     </ul>
 
